Add persistency json to store settings

--- a/BuildAgent/BuildAgent.Build.WPF/BuildAgent.Build.WPF.csproj
+++ b/BuildAgent/BuildAgent.Build.WPF/BuildAgent.Build.WPF.csproj
@@ -37,6 +37,9 @@
     <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\CommonServiceLocator.1.3\lib\portable-net4+sl5+netcore45+wpa81+wp8\Microsoft.Practices.ServiceLocation.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="Prism, Version=6.3.0.0, Culture=neutral, PublicKeyToken=40ee6c3a2184dc59, processorArchitecture=MSIL">
       <HintPath>..\packages\Prism.Core.6.3.0\lib\net45\Prism.dll</HintPath>
     </Reference>
@@ -66,6 +69,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ListBoxExtenders.cs" />
     <Compile Include="ViewModel.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -111,6 +115,10 @@
     <ProjectReference Include="..\BuildAgent.Build.FullFramework\BuildAgent.Build.FullFramework.csproj">
       <Project>{afdfa86b-f3f4-4ab1-be8d-85a4a6f348e0}</Project>
       <Name>BuildAgent.Build.FullFramework</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\BuildAgent.Config\BuildAgent.Config.csproj">
+      <Project>{665830e2-9789-4f98-ad0d-c0d974a9e96a}</Project>
+      <Name>BuildAgent.Config</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
