--- a/BuildAgent/BuildAgent.Build.WPF/packages.config
+++ b/BuildAgent/BuildAgent.Build.WPF/packages.config
@@ -4,4 +4,5 @@
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net47" />
   <package id="Prism.Core" version="6.3.0" targetFramework="net47" />
   <package id="Prism.Wpf" version="6.3.0" targetFramework="net47" />
+  <package id="WindowsAPICodePack" version="1.1.0" targetFramework="net47" />
 </packages>
